[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scenes/LevelPlayer.gd" type="Script" id=1]
[ext_resource path="res://Audio/GamePlay2.ogg" type="AudioStream" id=2]
[ext_resource path="res://Fonts/FFFFORWA.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://Entities/Coin/Rad_Coin.png" type="Texture" id=4]
[ext_resource path="res://Assets/Back_and_Rewind.png" type="Texture" id=5]
[ext_resource path="res://Audio/Portal.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Tiles/StaticTileset.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 32
extra_spacing_char = 2
font_data = ExtResource( 3 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 5 )
region = Rect2( 31, 57, 76, 28 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 31, 9, 76, 28 )

[sub_resource type="DynamicFont" id=5]
size = 40
extra_spacing_top = 22
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=6]
length = 2.3
tracks/0/type = "bezier"
tracks/0/path = NodePath("LevelName:anchor_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.1925, -0.624609, 0.05, -0.25, 0, 0.25, 0, -0.05, -0.25, 0, 0.25, 0, -1, -0.2175, 0.636098, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4, 1.8, 2.2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("LevelName:anchor_right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 2, -0.25, 0, 0.1625, -0.597794, 1.05, -0.25, 0, 0.25, 0, 0.95, -0.25, 0, 0.25, 0, 0, -0.1875, 0.511605, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4, 1.8, 2.2 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("WinScreen:anchor_right")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("WinScreen:anchor_left")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Win"
tracks/0/type = "value"
tracks/0/path = NodePath("WinScreen:anchor_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 0.225313, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WinScreen:anchor_right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 0.225313, 1 ),
"update": 0,
"values": [ 2.0, 1.0 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("WinScreen/ColorRect/Restart/WinRestartButton")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "grab_focus"
} ]
}

[sub_resource type="DynamicFont" id=8]
size = 24
extra_spacing_char = 2
font_data = ExtResource( 3 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 7 )
region = Rect2( 128, 256, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 7 )
region = Rect2( 192, 192, 32, 32 )

[node name="LevelPlayer" type="Node2D"]
script = ExtResource( 1 )

[node name="WinSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -4.97
autoplay = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 300 )
offset = Vector2( 0, -88 )
current = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Banner" type="ColorRect" parent="CanvasLayer/Control"]
anchor_right = 1.0
margin_bottom = 88.0
color = Color( 0.129412, 0.105882, 0.239216, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sec" type="Label" parent="CanvasLayer/Control/Banner"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -0.000732422
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.447059, 0.447059, 0.631373, 1 )
text = "00"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="min" type="Label" parent="CanvasLayer/Control/Banner"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -66.0
margin_right = -66.0007
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.447059, 0.447059, 0.631373, 1 )
text = "00"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mili" type="Label" parent="CanvasLayer/Control/Banner"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 66.0
margin_right = 65.9993
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.447059, 0.447059, 0.631373, 1 )
text = "00"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="colon" type="Label" parent="CanvasLayer/Control/Banner"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -33.0
margin_right = -33.0007
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.447059, 0.447059, 0.631373, 1 )
text = ":"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="period" type="Label" parent="CanvasLayer/Control/Banner"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 33.0
margin_right = 32.9993
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.447059, 0.447059, 0.631373, 1 )
text = "."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coin_count" type="Label" parent="CanvasLayer/Control/Banner"]
anchor_left = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.913725, 1, 0.74902, 1 )
text = "00"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/Banner/coin_count"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -55.0
margin_right = -55.0
texture = SubResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="TextureButton" parent="CanvasLayer/Control/Banner"]
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 24.0
margin_right = 128.0
margin_bottom = -24.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = SubResource( 3 )
expand = true
stretch_mode = 5

[node name="Rewind" type="TextureButton" parent="CanvasLayer/Control/Banner"]
anchor_bottom = 1.0
margin_left = 144.0
margin_top = 24.0
margin_right = 240.0
margin_bottom = -24.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = SubResource( 4 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back2LvlEditor" type="Button" parent="CanvasLayer/Control"]
visible = false
margin_right = 138.0
margin_bottom = 32.0
focus_mode = 0
enabled_focus_mode = 0
text = "Back to Level Editor"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Button" parent="CanvasLayer/Control"]
visible = false
margin_top = 32.0
margin_right = 138.0
margin_bottom = 64.0
focus_mode = 0
enabled_focus_mode = 0
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelName" type="Label" parent="CanvasLayer/Control"]
anchor_left = 1.0
anchor_right = 2.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
text = "I AM SOME LEVEL NAME"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Control"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 6 )
anims/Win = SubResource( 7 )

[node name="WinScreen" type="Control" parent="CanvasLayer/Control"]
anchor_left = 1.0
anchor_right = 2.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control/WinScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -128.0
margin_right = 320.0
margin_bottom = 128.0
color = Color( 0.129412, 0.105882, 0.239216, 1 )

[node name="INFO" type="Label" parent="CanvasLayer/Control/WinScreen/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.913725, 1, 0.74902, 1 )
text = "YOU WIN!

TIME: 00:00.000
COINS: 00
"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Label" parent="CanvasLayer/Control/WinScreen/ColorRect"]
anchor_top = 0.7
anchor_right = 0.476
anchor_bottom = 1.0
margin_left = 16.0
margin_right = -74.0
margin_bottom = -16.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.913725, 1, 0.74902, 1 )
text = "BACK"
valign = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinBackButton" type="TextureButton" parent="CanvasLayer/Control/WinScreen/ColorRect/Back"]
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = SubResource( 9 )
texture_focused = SubResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NxtLvl" type="Label" parent="CanvasLayer/Control/WinScreen/ColorRect"]
anchor_left = 0.384
anchor_top = 0.7
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 264.0
margin_right = -16.0
margin_bottom = -16.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.913725, 1, 0.74902, 1 )
text = "NEXT
LEVEL"
align = 2
valign = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinNxtLvlButton" type="TextureButton" parent="CanvasLayer/Control/WinScreen/ColorRect/NxtLvl"]
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = SubResource( 9 )
texture_focused = SubResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Label" parent="CanvasLayer/Control/WinScreen/ColorRect"]
anchor_left = 0.5
anchor_top = 0.7
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -127.0
margin_right = 127.0
margin_bottom = -16.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.913725, 1, 0.74902, 1 )
text = "RESTART"
align = 1
valign = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinRestartButton" type="TextureButton" parent="CanvasLayer/Control/WinScreen/ColorRect/Restart"]
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = SubResource( 9 )
texture_focused = SubResource( 10 )
expand = true
[connection signal="pressed" from="CanvasLayer/Control/Banner/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Banner/Rewind" to="." method="_on_Rewind_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Back2LvlEditor" to="." method="_on_Back2LvlEditor_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/WinScreen/ColorRect/Back/WinBackButton" to="." method="_on_WinBackButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/WinScreen/ColorRect/NxtLvl/WinNxtLvlButton" to="." method="_on_WinNxtLvlButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/WinScreen/ColorRect/Restart/WinRestartButton" to="." method="_on_Restart_pressed"]
